Moved typescript type generator underneath the unified project api path
