# apps/docs/spec/api_v1_openapi.json
@@ -553,7 +553,7 @@
         "security": [{ "bearer": [] }]
       }
     },
-    "/v1/projects/{ref}/api-keys": {
+    "/platform/organizations/{slug}/projects/{ref}/api-keys": {
       "get": {
         "operationId": "v1-get-project-api-keys",
         "summary": "Get project api keys",
@@ -628,7 +628,7 @@
         "security": [{ "bearer": [] }]
       }
     },
-    "/v1/projects/{ref}/api-keys/legacy": {
+    "/platform/organizations/{slug}/projects/{ref}/api-keys/legacy": {
       "get": {
         "operationId": "v1-get-project-legacy-api-keys",
         "summary": "Check whether JWT based legacy (anon, service_role) API keys are enabled. This API endpoint will be removed in the future, check for HTTP 404 Not Found.",
@@ -689,7 +689,7 @@
         "security": [{ "bearer": [] }]
       }
     },
-    "/v1/projects/{ref}/api-keys/{id}": {
+    "/platform/organizations/{slug}/projects/{ref}/api-keys/{id}": {
       "patch": {
         "operationId": "v1-update-project-api-key",
         "summary": "Updates an API key for the project",
@@ -1563,7 +1563,7 @@
         "security": [{ "bearer": [] }]
       }
     },
-    "/v1/projects/{ref}/types/typescript": {
+    "/platform/organizations/{slug}/projects/{ref}/types/typescript": {
       "get": {
         "operationId": "v1-generate-typescript-types",
         "summary": "Generate TypeScript types",
