# apps/studio/pages/api/platform/organizations/[slug]/projects/[ref]/api-keys.ts
@@ -5,7 +5,27 @@ import { getVelaClient } from '../../../../../../../data/vela/vela'
 
 const handleGetAll = async (req: NextApiRequest, res: NextApiResponse) => {
   if (!IS_VELA_PLATFORM) {
-    return res.status(200).json([])
+    const response = [
+      {
+        name: 'anon',
+        api_key: process.env.SUPABASE_ANON_KEY ?? '',
+        id: 'anon',
+        type: 'legacy',
+        hash: '',
+        prefix: '',
+        description: 'Legacy anon API key',
+      },
+      {
+        name: 'service_role',
+        api_key: process.env.SUPABASE_SERVICE_KEY ?? '',
+        id: 'service_role',
+        type: 'legacy',
+        hash: '',
+        prefix: '',
+        description: 'Legacy service_role API key',
+      },
+    ]
+    return res.status(200).json(response)
   }
 
   const { slug, ref } = req.query
